feat: refactor event handling in app.py
Refactored event handling in app.py to use match case statement for better readability and maintainability. Updated logic for 'ADDED', 'MODIFIED', and 'DELETED' events.

--- a/code/Dockerfile
+++ b/code/Dockerfile
@@ -1,5 +1,5 @@
 # Usar uma imagem base oficial do Python
-FROM python:3.9-slim
+FROM python:3.9-alpine
 
 # Diretório de trabalho no contêiner
 WORKDIR /app
